@@ -1,7 +1,7 @@
 /*
   (c) Copyright 2002, 2004, 2005, 2006, 2007, 2008, 2009 Hewlett-Packard Development Company, LP
   [See end of file]
-  $Id: TestPackage.java,v 1.1 2009-06-29 08:55:40 castagna Exp $
+  $Id: TestPackage.java,v 1.2 2009-08-23 19:50:35 der Exp $
 */
 
 package com.hp.hpl.jena.graph.test;
@@ -38,6 +38,7 @@ public class TestPackage extends TestSuite {
         addTest( TestReificationWrapper.suite() );
         addTest( TestReificationPredicates.suite() );
         addTest( TestTypedLiterals.suite() );
+        addTest( TestDateTime.suite() );
         addTest( TestGraphQueryPackage.suite() );
         addTest( TestFactory.suite() );
         addTest( TestGraph.suite() );
